fix: copied guest id icon spacing

--- a/components/guest-list/component.module.css
+++ b/components/guest-list/component.module.css
@@ -122,6 +122,7 @@
 }
 
 .copiedGuestGroupIdIcon,
+.copiedGuestIdIcon,
 .copyGuestGroupIdIcon,
 .copyGuestIdIcon {
   margin-left: 1rem;
